Remove cruft